@@ -22,6 +22,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
+#include <stdint.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <fcntl.h>
@@ -33,6 +34,7 @@
 #include <errno.h>
 
 #include "../pommed.h"
+#include "../evloop.h"
 #include "../conffile.h"
 #include "../kbd_backlight.h"
 #include "../ambient.h"
@@ -255,6 +257,15 @@ kbd_backlight_init(void)
   kbd_bck_info.max = KBD_BACKLIGHT_MAX;
 
   ambient_init(&kbd_bck_info.r_sens, &kbd_bck_info.l_sens);
+
+  kbd_auto_init();
+}
+
+void
+kbd_backlight_cleanup(void)
+{
+  if (has_kbd_backlight())
+    kbd_auto_cleanup();
 }
 
 
@@ -271,5 +282,5 @@ kbd_backlight_fix_config(void)
     kbd_cfg.step = KBD_BACKLIGHT_MAX / 2;
 
   if (kbd_cfg.idle > 0)
-    kbd_cfg.idle = (kbd_cfg.idle * 1000) / LOOP_TIMEOUT;
+    kbd_cfg.idle = (kbd_cfg.idle * 1000) / KBD_TIMEOUT;
 }
