@@ -6,6 +6,8 @@ version 1.19:
 	- gpomme: integrate config file monitoring and DBus messaging into
 	the main loop. Get rid of the 10 times per second polling.
 	- pommed: new event loop.
+	- pommed: convert power, kbd and dbus to timers integrated into
+	the event loop.
 
 version 1.18:
 	- pommed: add more IDs for Apple external keyboards
